--- a/employment.html
+++ b/employment.html
@@ -2,405 +2,266 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>Employment 管理 (MockAPI)</title>
+<title>就職状況管理</title>
+
 <style>
-  body { font-family: sans-serif; margin: 16px; }
-  #app { display: none; }
+body { font-family: sans-serif; margin: 16px; }
+#app { display: none; }
 
-  table { border-collapse: collapse; width: 100%; margin-top: 10px; }
-  th, td { border: 1px solid #ccc; padding: 8px; }
-  th { background-color: #f0f0f0; cursor: pointer; }
+table { border-collapse: collapse; width: 100%; margin-top: 10px; }
+th, td { border: 1px solid #ccc; padding: 8px; }
+th { background: #f0f0f0; }
 
-  .input-text { font-size: 16px; padding: 4px; width: 300px; margin-bottom: 6px; }
-  .input-date { font-size: 16px; padding: 4px; margin-bottom: 6px; }
+.input-text { font-size: 16px; padding: 4px; width: 300px; margin-bottom: 6px; }
+.input-date { font-size: 16px; padding: 4px; }
 
-  .big-button {
-    font-size: 18px; padding: 10px 20px; margin-right: 10px; width: 150px;
-    border: none; background-color: #4CAF50; color: white;
-    border-radius: 6px; cursor: pointer; box-shadow: 0 3px 6px rgba(0,0,0,0.2);
-  }
-  .big-button:hover { background-color: #45a049; }
+.big-button {
+  font-size: 18px;
+  padding: 10px 20px;
+  margin-right: 10px;
+  border: none;
+  border-radius: 6px;
+  background: #4CAF50;
+  color: white;
+  cursor: pointer;
+}
+.delete-button { background: #e74c3c; }
 
-  .delete-button { background-color: #e74c3c; }
-  .delete-button:hover { background-color: #c0392b; }
-
-  #companyModal { display: none; position: fixed; z-index: 30; left: 0; top: 0;
-    width: 100%; height: 100%; background: rgba(0,0,0,0.5); }
-  #modalContent {
-    background: white; width: 80%; max-width: 1000px; margin: 40px auto;
-    padding: 20px; border-radius: 10px;
-  }
-  #closeModal { float:right; cursor:pointer; font-size:20px; }
-
-  #loginBox {
-    max-width: 420px; margin: 80px auto; padding: 24px; border-radius: 10px;
-    box-shadow: 0 6px 18px rgba(0,0,0,0.12); background: #fff;
-  }
-  #loginErr { color:#c0392b; min-height:18px; }
-
-  #topBar { display:flex; justify-content:space-between; align-items:center; gap:12px; }
+#loginBox {
+  max-width: 420px;
+  margin: 80px auto;
+  padding: 24px;
+  border-radius: 10px;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.12);
+}
 </style>
 </head>
 <body>
 
-<!-- ログイン画面 -->
-<div id="loginBox" style="display:none;">
+<!-- ログイン -->
+<div id="loginBox">
   <h2>ログイン</h2>
-  <p>パスワードを入力してください</p>
+  <p>管理者：パスワード / 学生：学籍番号のみ</p>
 
-  <input id="pwInput" type="password" class="input-text" placeholder="パスワード">
+  <input id="loginId" class="input-text" placeholder="学籍番号">
+  <input id="pwInput" type="password" class="input-text" placeholder="管理者パスワード（学生は空）">
 
-  <div style="margin-top:8px;">
-    <button class="big-button" onclick="tryLogin()">ログイン</button>
-    <button class="big-button delete-button" onclick="clearLoginInput()" style="width:auto;">クリア</button>
-  </div>
-  <p id="loginErr"></p>
+  <br>
+  <button class="big-button" onclick="tryLogin()">ログイン</button>
+  <p id="loginErr" style="color:red;"></p>
 </div>
 
-
-<!-- アプリ本体 -->
+<!-- メイン -->
 <div id="app">
 
-  <div id="topBar">
-    <h1>Employment 管理</h1>
-    <div>
-      <button class="big-button" onclick="exportCSV()" style="width:auto;">CSV出力</button>
-      <button class="big-button delete-button" onclick="logout()" style="width:auto;">ログアウト</button>
-    </div>
-  </div>
+<h1>就職状況管理</h1>
 
-  <div style="margin-top:10px;">
-    <input id="searchBox" placeholder="生徒名で検索" class="input-text" style="width:260px;">
-    <button class="big-button" onclick="searchEmployment()" style="width:auto;">検索</button>
-    <button class="big-button" onclick="clearAll()" style="width:auto; margin-right:20px;">クリア</button>
-
-    <!-- 会社登録 -->
-    <button class="big-button" onclick="openCompanyPage()" style="width:auto;">会社登録</button>
-  </div>
-
-  <hr>
-
-  <h2>登録 / 編集</h2>
-
-  生徒:<br>
-  <input id="student" class="input-text"><br>
-
-  会社名:<br>
-  <input id="companyName" class="input-text" readonly onclick="openModal()" placeholder="クリックして選択"><br>
-
-  状況:<br>
-  <select id="statusSelect" class="input-text" onchange="onStatusChange()">
-    <option value="">選択してください</option>
-    <option value="説明会">説明会</option>
-    <option value="不採用">不採用</option>
-    <option value="書類選考応募">書類選考応募</option>
-    <option value="１次面接予定">１次面接予定</option>
-    <option value="２次面接予定">２次面接予定</option>
-    <option value="最終面接予定">最終面接予定</option>
-    <option value="内定">内定</option>
-    <option value="内定承諾">内定承諾</option>
-    <option value="その他">その他（自由入力）</option>
-  </select><br>
-
-  <input id="statusOther" class="input-text" placeholder="自由に入力" style="display:none;"><br>
-
-  日付:<br>
-  <input type="date" id="date" class="input-date"><br><br>
-
-  <button class="big-button" onclick="addEmployment()">追加</button>
-  <button class="big-button" onclick="updateEmployment()">編集</button>
-  <button class="big-button delete-button" onclick="deleteEmployment()">削除</button>
-
-  <hr>
-
-  <table>
-    <thead>
-      <tr>
-        <th>選択</th>
-        <th onclick="sortBy('student')">生徒</th>
-        <th>会社名</th>
-        <th>状況</th>
-        <th>日付</th>
-      </tr>
-    </thead>
-    <tbody id="employment-table"></tbody>
-  </table>
-
+<div>
+  <input id="searchBox" class="input-text" placeholder="生徒番号で検索">
+  <button class="big-button" onclick="searchEmployment()">検索</button>
+  <button class="big-button" onclick="clearAll()">クリア</button>
+  <button class="big-button" onclick="openCompanyPage()">会社登録</button>
 </div>
 
-<!-- モーダル -->
-<div id="companyModal">
-  <div id="modalContent">
-    <span id="closeModal" onclick="closeModal()">✖</span>
-    <h2>会社を選択</h2>
+<hr>
 
-    <input id="companySearch" placeholder="検索（会社名/ふりがな）" oninput="filterCompanies()" class="input-text">
+<h3>登録 / 編集</h3>
 
-    <table>
-      <thead>
-        <tr>
-          <th>会社名</th>
-          <th>ふりがな</th>
-          <th>URL</th>
-          <th>備考</th>
-          <th>備考2</th>
-        </tr>
-      </thead>
-      <tbody id="companyTable"></tbody>
-    </table>
-  </div>
+生徒<br>
+<input id="student" class="input-text"><br>
+
+会社名<br>
+<input id="companyName" class="input-text" readonly onclick="openCompanyModal()"><br>
+
+状況<br>
+<select id="statusSelect" class="input-text">
+  <option>説明会</option>
+  <option>不採用</option>
+  <option>書類選考応募</option>
+  <option>１次面接予定</option>
+  <option>２次面接予定</option>
+  <option>最終面接予定</option>
+  <option>内定</option>
+  <option>内定承諾</option>
+</select><br>
+
+日付<br>
+<input type="date" id="date" class="input-date"><br><br>
+
+<button class="big-button" onclick="addEmployment()">追加</button>
+<button class="big-button" onclick="updateEmployment()">編集</button>
+<button class="big-button delete-button" onclick="deleteEmployment()">削除</button>
+
+<hr>
+
+<table>
+<thead>
+<tr>
+  <th>選択</th>
+  <th>生徒</th>
+  <th>会社名</th>
+  <th>状況</th>
+  <th>日付</th>
+</tr>
+</thead>
+<tbody id="employment-table"></tbody>
+</table>
+
 </div>
 
 <script>
-/* ========= ログイン ========= */
+/* ===== 設定 ===== */
+const API_EMP = "https://69391958c8d59937aa067b4c.mockapi.io/employment/";
+const STUDENT_JSON = "students.json";
+const ADMIN_HASH = "cfb075da768369ee05d64141329c41e908ea99cc88da9ee5f5d5e79ca5792d3e";
 
-const STORED_HASH = "cfb075da768369ee05d64141329c41e908ea99cc88da9ee5f5d5e79ca5792d3e"; 
-const LOGIN_KEY = "employment_login_v1";
+/* ===== 状態 ===== */
+let loginRole = "";
+let loginStudentId = "";
+let employment = [];
+let students = [];
+let selectedId = null;
 
+/* ===== util ===== */
 async function sha256(str) {
   const buf = await crypto.subtle.digest("SHA-256", new TextEncoder().encode(str));
-  return [...new Uint8Array(buf)].map(x => x.toString(16).padStart(2,"0")).join("");
+  return [...new Uint8Array(buf)].map(x => x.toString(16).padStart(2, "0")).join("");
 }
 
+function getStudentName(id) {
+  const s = students.find(x => x.id === id);
+  return s ? s.name : "不明";
+}
+
+/* ===== 初期読み込み ===== */
+fetch(STUDENT_JSON)
+  .then(res => res.json())
+  .then(data => students = data);
+
+/* ===== ログイン ===== */
 async function tryLogin() {
-  const pw = document.getElementById("pwInput").value;
-  const hash = await sha256(pw);
-  if (hash === STORED_HASH) {
-    localStorage.setItem(LOGIN_KEY, "1");
-    showApp();
-  } else {
-    document.getElementById("loginErr").innerText = "パスワードが違います";
+  const id = loginId.value.trim();
+  const pw = pwInput.value;
+
+  if (!id) {
+    loginErr.textContent = "入力してください";
+    return;
   }
-}
 
-document.getElementById("pwInput").addEventListener("keydown", e => {
-  if (e.key === "Enter") tryLogin();
-});
+  if (pw) {
+    if (await sha256(pw) !== ADMIN_HASH) {
+      loginErr.textContent = "パスワードが違います";
+      return;
+    }
+    loginRole = "admin";
+    student.disabled = false;
+  } else {
+    loginRole = "student";
+    loginStudentId = id;
+    student.value = id;
+    student.disabled = true;
+  }
 
-function clearLoginInput() {
-  document.getElementById("pwInput").value = "";
-  document.getElementById("loginErr").innerText = "";
-}
+  loginBox.style.display = "none";
+  app.style.display = "block";
 
-function logout() {
-  localStorage.removeItem(LOGIN_KEY);
-  hideApp();
-}
-
-function showApp() {
-  document.getElementById("loginBox").style.display = "none";
-  document.getElementById("app").style.display = "block";
   loadEmployment();
 }
-function hideApp() {
-  document.getElementById("app").style.display = "none";
-  document.getElementById("loginBox").style.display = "block";
-}
 
-function checkLoginOnLoad() {
-  if (localStorage.getItem(LOGIN_KEY) === "1") showApp();
-  else document.getElementById("loginBox").style.display = "block";
-}
-
-/* ========= Employment CRUD ========= */
-
-const API_EMP = "https://69391958c8d59937aa067b4c.mockapi.io/employment/";
-const API_COMPANY = "https://69391958c8d59937aa067b4c.mockapi.io/company/";
-
-let employment = [];
-let companies = [];
-let selectedId = null;
-let sortKey = "student";
-let sortAsc = true;
-
+/* ===== 一覧取得 ===== */
 function loadEmployment() {
   fetch(API_EMP)
-    .then(r=>r.json())
-    .then(d=>{ employment=d; renderEmploymentTable(d); });
+    .then(res => res.json())
+    .then(data => {
+      employment = (loginRole === "student")
+        ? data.filter(e => e.student === loginStudentId)
+        : data;
+      renderTable(employment);
+    });
 }
 
-function renderEmploymentTable(list) {
-  const tbody = document.getElementById("employment-table");
-  tbody.innerHTML = "";
+/* ===== 表示 ===== */
+function renderTable(list) {
+  const tb = document.getElementById("employment-table");
+  tb.innerHTML = "";
 
-  list.sort((a,b) => {
-    let A=a[sortKey]||"", B=b[sortKey]||"";
-    return sortAsc ? A.localeCompare(B) : B.localeCompare(A);
-  });
-
-  list.forEach(e=>{
-    const tr=document.createElement("tr");
-
-    if (e.status==="内定") tr.style.background="#ccffcc";
-    if (e.status==="不採用") tr.style.background="#e0e0e0";
-    if (e.status==="内定承諾") tr.style.background="#99ff99";
-
+  list.forEach(e => {
+    const tr = document.createElement("tr");
     tr.innerHTML = `
-      <td><input type="radio" name="sel" onclick="selectEmployment('${e.id}')"></td>
-      <td>${e.student}</td>
+      <td><input type="radio" name="sel" onclick="selectRow('${e.id}')"></td>
+      <td>${e.student}（${getStudentName(e.student)}）</td>
       <td>${e.companyName}</td>
       <td>${e.status}</td>
-      <td>${e.date}</td>
+      <td>${e.date || ""}</td>
     `;
-    tbody.appendChild(tr);
+    tb.appendChild(tr);
   });
 }
 
-function selectEmployment(id) {
+/* ===== 選択 ===== */
+function selectRow(id) {
   selectedId = id;
-  const e = employment.find(x=>x.id===id);
-  document.getElementById("student").value = e.student;
-  document.getElementById("companyName").value = e.companyName;
-
-  if ([...document.getElementById("statusSelect").options].some(o=>o.value===e.status)) {
-    document.getElementById("statusSelect").value = e.status;
-    document.getElementById("statusOther").style.display="none";
-  } else {
-    document.getElementById("statusSelect").value = "その他";
-    document.getElementById("statusOther").style.display="block";
-    document.getElementById("statusOther").value = e.status;
-  }
-
-  document.getElementById("date").value = e.date;
+  const e = employment.find(x => x.id === id);
+  student.value = e.student;
+  companyName.value = e.companyName;
+  statusSelect.value = e.status;
+  date.value = e.date;
 }
 
-function onStatusChange() {
-  const val = document.getElementById("statusSelect").value;
-  document.getElementById("statusOther").style.display = (val==="その他")?"block":"none";
-}
-
-function getFormValues() {
-  const sel = document.getElementById("statusSelect").value;
-  const other = document.getElementById("statusOther").value;
+/* ===== 登録・編集 ===== */
+function getForm() {
   return {
-    student: document.getElementById("student").value.trim(),
-    companyName: document.getElementById("companyName").value.trim(),
-    status: (sel==="その他"? other : sel),
-    date: document.getElementById("date").value
+    student: (loginRole === "student") ? loginStudentId : student.value,
+    companyName: companyName.value,
+    status: statusSelect.value,
+    date: date.value
   };
 }
 
 function addEmployment() {
-  const data = getFormValues();
-  if (!data.student) return alert("生徒名を入力");
-  if (!data.companyName) return alert("会社名を選択");
-
-  fetch(API_EMP,{
-    method:"POST",headers:{"Content-Type":"application/json"},
-    body:JSON.stringify(data)
+  fetch(API_EMP, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify(getForm())
   }).then(loadEmployment);
 }
 
 function updateEmployment() {
-  if (!selectedId) return alert("選択されていません");
-
-  fetch(API_EMP+selectedId,{
-    method:"PUT",headers:{"Content-Type":"application/json"},
-    body:JSON.stringify(getFormValues())
+  if (!selectedId) return;
+  fetch(API_EMP + selectedId, {
+    method: "PUT",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify(getForm())
   }).then(loadEmployment);
 }
 
 function deleteEmployment() {
-  if (!selectedId) return alert("選択されていません");
-  if (!confirm("本当に削除しますか？")) return;
-
-  fetch(API_EMP+selectedId,{method:"DELETE"}).then(loadEmployment);
+  if (!selectedId) return;
+  if (!confirm("削除しますか？")) return;
+  fetch(API_EMP + selectedId, { method: "DELETE" })
+    .then(loadEmployment);
 }
 
+/* ===== 検索・クリア ===== */
 function searchEmployment() {
-  const key = document.getElementById("searchBox").value.trim();
-  if (!key) return renderEmploymentTable(employment);
-  renderEmploymentTable(employment.filter(e=>e.student.includes(key)));
+  const k = searchBox.value.trim();
+  if (!k) return renderTable(employment);
+  renderTable(employment.filter(e => e.student.includes(k)));
 }
 
 function clearAll() {
-  document.getElementById("searchBox").value="";
-  document.getElementById("student").value="";
-  document.getElementById("companyName").value="";
-  document.getElementById("statusSelect").value="";
-  document.getElementById("statusOther").style.display="none";
-  document.getElementById("statusOther").value="";
-  document.getElementById("date").value="";
-  selectedId=null;
-  renderEmploymentTable(employment);
+  searchBox.value = "";
+  companyName.value = "";
+  statusSelect.value = "説明会";
+  date.value = "";
+  renderTable(employment);
 }
 
-function sortBy(key){
-  if (sortKey===key) sortAsc=!sortAsc;
-  else { sortKey=key; sortAsc=true; }
-  renderEmploymentTable(employment);
-}
-
-/* ========= Company モーダル ========= */
-
-function openModal() {
-  document.getElementById("companyModal").style.display="block";
-  loadCompanies();
-}
-function closeModal() {
-  document.getElementById("companyModal").style.display="none";
-}
-
-function loadCompanies() {
-  fetch(API_COMPANY)
-    .then(r=>r.json())
-    .then(d=>{ companies=d; renderCompanyTable(d); });
-}
-
-function renderCompanyTable(list) {
-  const tbody=document.getElementById("companyTable");
-  tbody.innerHTML="";
-  list.forEach(c=>{
-    const tr=document.createElement("tr");
-    tr.innerHTML = `
-      <td><span style="color:blue; cursor:pointer;" onclick="selectCompany('${c.companyName}')">${c.companyName}</span></td>
-      <td>${c.furigana||""}</td>
-      <td><a href="${c.url}" target="_blank">${c.url}</a></td>
-      <td>${c.etc||""}</td>
-      <td>${c.etc2||""}</td>
-    `;
-    tbody.appendChild(tr);
-  });
-}
-
-function filterCompanies() {
-  const key=document.getElementById("companySearch").value.trim();
-  renderCompanyTable(companies.filter(c =>
-    c.companyName.includes(key) ||
-    (c.furigana||"").includes(key)
-  ));
-}
-
-function selectCompany(name) {
-  document.getElementById("companyName").value=name;
-  closeModal();
-}
-
-/* ========= CSV 出力 ========= */
-
-function exportCSV() {
-  let csv="生徒,会社名,状況,日付\n";
-  employment.forEach(e=>{
-    csv+=`"${e.student}","${e.companyName}","${e.status}","${e.date}"\n`;
-  });
-
-  const bom=new Uint8Array([0xEF,0xBB,0xBF]);
-  const blob=new Blob([bom,csv],{type:"text/csv"});
-  const url=URL.createObjectURL(blob);
-  const a=document.createElement("a");
-  a.href=url;
-  a.download="employment.csv";
-  a.click();
-  URL.revokeObjectURL(url);
-}
-
-/* ========= 会社登録ボタン ========= */
+/* ===== 会社登録 ===== */
 function openCompanyPage() {
   window.open("company.html", "_blank");
 }
-
-/* 起動時ログイン確認 */
-checkLoginOnLoad();
 </script>
+
 </body>
 </html>
